{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 31,
  "lineage": "6ed7e7bc-0a2e-00dc-3e9b-3aeeac141730",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three-tier-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02939d7c9348c7fe7",
            "domain": "vpc",
            "id": "eipalloc-02939d7c9348c7fe7",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-77-172-91.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.172.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:internet-gateway/igw-0d3761b0b8c643bf8",
            "id": "igw-0d3761b0b8c643bf8",
            "owner_id": "888151814153",
            "tags": {
              "Name": "three-tier-igw"
            },
            "tags_all": {
              "Name": "three-tier-igw"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three-tier-web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:loadbalancer/app/three-tier-web-lb/337f240426635790",
            "arn_suffix": "app/three-tier-web-lb/337f240426635790",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-three-tier-web-lb-1283151265.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:loadbalancer/app/three-tier-web-lb/337f240426635790",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-web-lb",
            "security_groups": [
              "sg-0632f433d257614ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054503c8ff6c2b0db"
              },
              {
                "subnet_id": "subnet-0ff32f072bb76cdd4"
              }
            ],
            "subnets": [
              "subnet-054503c8ff6c2b0db",
              "subnet-0ff32f072bb76cdd4"
            ],
            "tags": {
              "Environment": "three-tier-web-lb"
            },
            "tags_all": {
              "Environment": "three-tier-web-lb"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three-tier-web-lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:listener/app/three-tier-web-lb/337f240426635790/15f52fa6bbf9cda5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:targetgroup/three-tier-web-lb-tg/500a656391e9ad2f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:listener/app/three-tier-web-lb/337f240426635790/15f52fa6bbf9cda5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:loadbalancer/app/three-tier-web-lb/337f240426635790",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three-tier-web-lb",
            "aws_lb_target_group.three-tier-web-lb-tg",
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three-tier-web-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:targetgroup/three-tier-web-lb-tg/500a656391e9ad2f",
            "arn_suffix": "targetgroup/three-tier-web-lb-tg/500a656391e9ad2f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:888151814153:targetgroup/three-tier-web-lb-tg/500a656391e9ad2f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "three-tier-web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three-tier-natgw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02939d7c9348c7fe7",
            "connectivity_type": "public",
            "id": "nat-0abd1e01a6ba57284",
            "network_interface_id": "eni-022962544c512946e",
            "private_ip": "10.0.0.10",
            "public_ip": "52.77.172.91",
            "subnet_id": "subnet-054503c8ff6c2b0db",
            "tags": {
              "Name": "three-tier-natgw-01"
            },
            "tags_all": {
              "Name": "three-tier-natgw-01"
            }
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:route-table/rtb-00ed8d4294b13f9fc",
            "id": "rtb-00ed8d4294b13f9fc",
            "owner_id": "888151814153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0abd1e01a6ba57284",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-app-rt"
            },
            "tags_all": {
              "Name": "three-tier-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:route-table/rtb-0a9decf816ce6cdb7",
            "id": "rtb-0a9decf816ce6cdb7",
            "owner_id": "888151814153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3761b0b8c643bf8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-web-rt"
            },
            "tags_all": {
              "Name": "three-tier-web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057868737b4046da4",
            "route_table_id": "rtb-0a9decf816ce6cdb7",
            "subnet_id": "subnet-054503c8ff6c2b0db"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_route_table.three-tier-web-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d8a4015b553e58c",
            "route_table_id": "rtb-0a9decf816ce6cdb7",
            "subnet_id": "subnet-0ff32f072bb76cdd4"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_route_table.three-tier-web-rt",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2d965217cdaf5cd",
            "route_table_id": "rtb-00ed8d4294b13f9fc",
            "subnet_id": "subnet-0c98a85084662b4a2"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ec281be51e45a48",
            "route_table_id": "rtb-00ed8d4294b13f9fc",
            "subnet_id": "subnet-038fbc89c9ed01a69"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa4e5dde70f17912",
            "route_table_id": "rtb-00ed8d4294b13f9fc",
            "subnet_id": "subnet-0f346b15a507fb351"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-3",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0459e090c239fe321",
            "route_table_id": "rtb-00ed8d4294b13f9fc",
            "subnet_id": "subnet-029ec9eaa304846f3"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-4",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-alb-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:security-group/sg-0632f433d257614ad",
            "description": "load balancer security group for web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0632f433d257614ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "three-tier-alb-sg-1",
            "name_prefix": "",
            "owner_id": "888151814153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-1"
            },
            "tags_all": {
              "Name": "three-tier-alb-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-alb-sg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:security-group/sg-0f798dbd45d55e285",
            "description": "load balancer security group for app tier",
            "egress": [],
            "id": "sg-0f798dbd45d55e285",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0632f433d257614ad"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-alb-sg-2",
            "name_prefix": "",
            "owner_id": "888151814153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-2"
            },
            "tags_all": {
              "Name": "three-tier-alb-sg-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three-tier-alb-sg-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:security-group/sg-0d99235bb5cc68980",
            "description": "allow traffic from app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d99235bb5cc68980",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06848a7e4da45fcd0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.32/28",
                  "10.0.0.48/28"
                ],
                "description": "Access for the web ALB SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "three-tier-db-sg",
            "name_prefix": "",
            "owner_id": "888151814153",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three-tier-ec2-asg-sg",
            "aws_security_group.three-tier-ec2-asg-sg-app",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:security-group/sg-0e3106aa172219a6b",
            "description": "Allow traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3106aa172219a6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "three-tier-ec2-asg-sg",
            "name_prefix": "",
            "owner_id": "888151814153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-ec2-asg-sg"
            },
            "tags_all": {
              "Name": "three-tier-ec2-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:security-group/sg-06848a7e4da45fcd0",
            "description": "Allow traffic from web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06848a7e4da45fcd0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0e3106aa172219a6b"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3106aa172219a6b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3106aa172219a6b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-ec2-asg-sg-app",
            "name_prefix": "",
            "owner_id": "888151814153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-ec2-asg-sg-app"
            },
            "tags_all": {
              "Name": "three-tier-ec2-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three-tier-ec2-asg-sg",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:subnet/subnet-054503c8ff6c2b0db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054503c8ff6c2b0db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888151814153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pub-sub-1"
            },
            "tags_all": {
              "Name": "three-tier-pub-sub-1"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:subnet/subnet-0ff32f072bb76cdd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff32f072bb76cdd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888151814153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pub-sub-2"
            },
            "tags_all": {
              "Name": "three-tier-pub-sub-2"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:subnet/subnet-0c98a85084662b4a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c98a85084662b4a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888151814153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-1"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-1"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:subnet/subnet-038fbc89c9ed01a69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038fbc89c9ed01a69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888151814153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-2"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-2"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:subnet/subnet-0f346b15a507fb351",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f346b15a507fb351",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888151814153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-3"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-3"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:subnet/subnet-029ec9eaa304846f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029ec9eaa304846f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888151814153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-4"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-4"
            },
            "vpc_id": "vpc-0cd526d5ec6d71d2d"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:888151814153:vpc/vpc-0cd526d5ec6d71d2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8dd06616205196e",
            "default_route_table_id": "rtb-020a3d259bf47be8f",
            "default_security_group_id": "sg-0fa5b6612295b025f",
            "dhcp_options_id": "dopt-006eba0b6bb9599bf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cd526d5ec6d71d2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020a3d259bf47be8f",
            "owner_id": "888151814153",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}